fixed z-index problem with the search bar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -384,6 +384,7 @@ p {
       position: fixed;
       padding-right: 20%;
       top: 129px;
+      z-index: 1000;
 
       span.search_icon {
         color: #999999;
